99-capstone-microservice-platform/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: capstone
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
