99-capstone-microservice-platform/manifests/db-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  namespace: capstone
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 80
    targetPort: 80
