99-capstone-microservice-platform/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: capstone
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
